<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.automotivecodelab.wbgoodstracker.ExtensionsKt"/>
        <variable
            name="size"
            type="com.automotivecodelab.wbgoodstracker.domain.models.Size" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        style="?attr/materialCardViewFilledStyle">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    app:layout_constraintBottom_toTopOf="@+id/count1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/size_name"
                    android:text="@string/size_name"
                    android:textAppearance="@style/Body"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/count1"
                    android:text="@{size.sizeName}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="M"
                    android:gravity="center"
                    android:textAppearance="@style/Big"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    app:layout_constraintBottom_toTopOf="@+id/count2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/quantity_in_warehouse"
                    android:text="@string/quantity_in_warehouse"
                    android:textAppearance="@style/Body"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/count2"
                    android:text="@{`` + size.quantity}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="25"
                    android:gravity="center"
                    android:textAppearance="@style/Big"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/quantity_delta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="@{ExtensionsKt.toStringWithSign(size.quantityDelta) ?? ``}"
                    android:textColor="@color/red"
                    app:layout_constraintStart_toEndOf="@+id/count2"
                    app:layout_constraintTop_toTopOf="@+id/count2"
                    tools:text="+5"
                    android:textAppearance="@style/Accent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    app:layout_constraintBottom_toTopOf="@+id/count3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/price"
                    android:text="@string/price"
                    android:textAppearance="@style/Body"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/count3"
                    android:text="@{`` + size.price}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2000"
                    android:gravity="center"
                    android:textAppearance="@style/Big"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    app:layout_constraintBottom_toTopOf="@+id/count4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/price_with_sale"
                    android:text="@string/price_with_sale"
                    android:textAppearance="@style/Body"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/count4"
                    android:text="@{`` + size.priceWithSale}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1500"
                    android:gravity="center"
                    android:textAppearance="@style/Big"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/warehouses_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_columnSpan="2">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    app:layout_constraintBottom_toTopOf="@+id/count5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/warehouses"
                    android:text="@string/warehouses"
                    android:textAppearance="@style/Body"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/count5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Екатеринбург"
                    android:gravity="center"
                    android:textAppearance="@style/Body"
                    android:textSize="20sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </GridLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>